--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@syncfusion/ej2-angular-dropdowns": "^25.1.39",
+    "@syncfusion/ej2-angular-navigations": "^25.1.39",
+    "@syncfusion/ej2-angular-notifications": "^25.1.35",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -33,6 +36,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss-import": "^16.1.0",
+    "tailwindcss": "^3.4.3",
     "typescript": "~5.4.2"
   }
 }
